--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,4 +1,7 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
-    <h1>CYBERTRAP TCG portada index</h1>
+
+        <h1>CyberTrap TCG index</h1>
+
+
 {% endblock %}
