--- a/app/Resources/views/typeCard/listaAdmin.html.twig
+++ b/app/Resources/views/typeCard/listaAdmin.html.twig
@@ -7,12 +7,12 @@
         <table class="table" >
             <thead>
             <tr>
-                <th class="letra_listas_cabecera">ID</th>
-                <th class="letra_listas_cabecera">Nombre</th>
-                <th class="letra_listas_cabecera"><i class="fas -dumbbell fa-dumbbell"></i>Fuerza</th>
-                <th class="letra_listas_cabecera"><i class="fas fa-microchip"></i>Hacking</th>
-                <th class="letra_listas_cabecera"><i class="fas fa-biohazard"></i>Bioshock</th>
-                <th class="letra_listas_cabecera"><i class="fas fa-running"></i>Agilidad</th>
+                <th class="neon">ID</th>
+                <th class="neon">Nombre</th>
+                <th class="neon"><i class="fas -dumbbell fa-dumbbell"></i>Fuerza</th>
+                <th class="neon"><i class="fas fa-microchip"></i>Hacking</th>
+                <th class="neon"><i class="fas fa-biohazard"></i>Bioshock</th>
+                <th class="neon"><i class="fas fa-running"></i>Agilidad</th>
 
             </tr>
             </thead>
