--- a/app/Resources/views/juego/combate.html.twig
+++ b/app/Resources/views/juego/combate.html.twig
@@ -6,7 +6,7 @@
         <div id="oponente" class="div_cartas">
             {% for carta in cartasOponente %}
             <figure class="carta_batalla">
-                <img class="img_carta_batalla" src="{{ asset(raiz~carta.typeCard.imageRoute~'.jpg') }}"  alt="">
+                <img name="cartasOponente[]" value="{{ carta.id }}" class="img_carta_batalla" src="{{ asset(raiz~carta.typeCard.imageRoute~'.jpg') }}"  alt="">
                 <figcaption>
                     <p class="skills"> <span class="txt_carta_batalla"><i class="fas -dumbbell fa-dumbbell"></i></span><span class="txt_carta_batalla"><i class="fas fa-microchip"></i></span><span class="txt_carta_batalla"><i class="fas fa-biohazard"></i></span> <span class="txt_carta_batalla"><i class="fas fa-running"></i></span> </p>
                     <p class="skills"> <span class="txt_carta_batalla">{{ carta.typeCard.atqA}}</span><span class="txt_carta_batalla">{{ carta.typeCard.atqB}}</span><span class="txt_carta_batalla">{{ carta.typeCard.atqC}}</span> <span class="txt_carta_batalla">{{ carta.typeCard.atqD}}</span> </p>
@@ -37,7 +37,7 @@
         <div id="jugador"  class="div_cartas">
             {% for carta in cartasJugador %}
                 <figure class="carta_batalla">
-                    <img class="img_carta_batalla carta_jugador" src="{{ asset(raiz~carta.typeCard.imageRoute~'.jpg') }}"  alt="">
+                    <img name="name" value="{{ carta.id }}" class="img_carta_batalla carta_jugador" src="{{ asset(raiz~carta.typeCard.imageRoute~'.jpg') }}"  alt="">
                     <figcaption>
                         <p class="skills"> <span class="txt_carta_batalla"><i class="fas -dumbbell fa-dumbbell"></i></span><span class="txt_carta_batalla"><i class="fas fa-microchip"></i></span><span class="txt_carta_batalla"><i class="fas fa-biohazard"></i></span> <span class="txt_carta_batalla"><i class="fas fa-running"></i></span> </p>
                         <p class="skills"> <span class="txt_carta_batalla">{{ carta.typeCard.atqA}}</span><span class="txt_carta_batalla">{{ carta.typeCard.atqB}}</span><span class="txt_carta_batalla">{{ carta.typeCard.atqC}}</span> <span class="txt_carta_batalla">{{ carta.typeCard.atqD}}</span> </p>
@@ -45,7 +45,7 @@
                 </figure>
             {% endfor %}
             <div class="interfaz_batalla"><h4>{{ jugador.nickname }}</h4>
-                <form action="co">
+                <form action="{{ path('game_combate', {'jugador':jugador.id, 'mideck': deckJugador.id, 'oponente':oponente.id , 'sudeck':deckOponente.id}) }}">
                     <button type="submit" name="validar" value="validar" >Validar</button>
                 </form>
             </div>
