--- a/app/Resources/views/deck/crearMazo.html.twig
+++ b/app/Resources/views/deck/crearMazo.html.twig
@@ -4,14 +4,15 @@
 <div id="fondo_back" class="panel_fondo_transparente">
 {% set user = app.user %}
        {% if not es_nueva %}
-           <h1>Editar escuadrón</h1>
+           <h1 >Editar escuadrón</h1>
        {% else %}
-           <h1>Nuevo escuadrón</h1>
+           <h1 >Nuevo escuadrón</h1>
        {% endif %}
 
        {{ form_start(form) }}
        {{ form_widget(form) }}
-       <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Guardar cambios</button>
+        <a href="{{ path('cartas_lista_user', {'id': user.id}) }}" class="golden btn btn-outline-danger">Volver</a>
+       <button type="submit" class="neon2 btn btn-primary"><i class="golden fas fa-check"></i> Guardar cambios</button>
        {% if not es_nueva %}<a href="{{ path('deck_eliminar', {'deck': deck.id, 'id': usuario.id}) }}" class="btn btn-danger"><i class="fas fa-trash"></i>Borrar</a>{% endif %}
 
        {{ form_end(form) }}
