Creada portada, nuevo interfaz usuario

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,7 +1,12 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
 
-        <h1>CyberTrap TCG index</h1>
+        <div class=banner>
+
+                <p class="neon_portada neon--blue"> <a href="{{ path('usuario_nuevo') }}"></a>CyberTrap TCG</p>
+                <p class="neon_portada neon--pink"> <a href="{{ path('usuario_nuevo') }}"></a>A game by Rubén Morcillo</p>
+
+        </div>
 
 
 {% endblock %}
