--- a/app/Resources/views/juego/victoria.html.twig
+++ b/app/Resources/views/juego/victoria.html.twig
@@ -2,6 +2,9 @@
 
 
 {% block resultado %}
-<h1>has ganao</h1>
+<h5 style="color:lime">VICTORIA</h5>
+    <p>Has ganado 10 <span class="golden"><i class="fas fa-dollar-sign -dollar-sign"></i> Créditos</span></p>
+    <p>Has ganado 5<span class="golden"> <i class="fas -crown fa-crown"></i> Reputación</span></p>
 
 {% endblock %}
+
