Mejorado user flow en ADMIN

--- a/app/Resources/views/juego/combate.html.twig
+++ b/app/Resources/views/juego/combate.html.twig
@@ -48,7 +48,7 @@
 
                 <form method="post" action="{{ path('game_combate', {'jugador':jugador.id, 'mideck': deckJugador.id, 'oponente':oponente.id , 'sudeck':deckOponente.id}) }}">
 
-                    <button type="submit" name="atacar" >Atacar</button>
+                    <button class="btn btn-outline-danger" type="submit" name="atacar" >Atacar</button>
                 </form>
             </div>
         </div>
