--- a/app/Resources/views/juego/resultado.html.twig
+++ b/app/Resources/views/juego/resultado.html.twig
@@ -50,7 +50,7 @@
 
                 <form method="post" action="{{ path('interfazJuego', {'id': jugador.id}) }}">
 
-                        <button type="submit" name="atacar" >Continuar</button>
+                        <button class="btn btn-outline-info" type="submit" name="atacar" >Continuar</button>
                     </form>
             </div>
         </div>
