--- a/app/Resources/views/typeCard/form.html.twig
+++ b/app/Resources/views/typeCard/form.html.twig
@@ -1,11 +1,12 @@
 {% extends 'layout.html.twig' %}
 {% block title %}CyberTrap TCG - ADMIN{% endblock %}
 {% block content %}
-    <div id="fondo_back">
+    <div id="fondo_back" class="panel_fondo_transparente">
    <h1>Editar Carta</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
+        <a class="btn btn-outline-danger" href="{{ path('admin_card_list') }}">Salir sin guardar</a>
     <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Guardar cambios</button>
     {{ form_end(form) }}
     </div>
