Corregida redirección en tienda

--- a/app/Resources/views/market/tienda.html.twig
+++ b/app/Resources/views/market/tienda.html.twig
@@ -5,7 +5,7 @@
     <div class="menu_wrapper">
         <div class=menu_interfaz>
             <ul>
-                <li><a href="{{ path('cartas_lista_user',{'id':usuario.id}) }}">Cartas</a>
+                <li><a href="#">Cartas</a>
                     <ul>
                         <li>
                             <a href="{{ path('tienda_carta_comprar_una', {'id': usuario.id}) }}"><h3>1 Carta <span class="golden">10 $</span></h3></a>
